added group aggregation to the entity
